--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
 @import "assets/styles/basis";
 @import 'primeicons/primeicons.css';
 @import 'primeflex/primeflex.scss';
+@import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
